--- a/ZooManager/UI/Views/EmployeesView.xaml
+++ b/ZooManager/UI/Views/EmployeesView.xaml
@@ -24,7 +24,7 @@
                         <DataTemplate>
                             <!-- Korrigiert: Kein Komma mehr am Ende -->
                             <TextBlock FontSize="14" Margin="0,4">
-                                <Run Text="{Binding LastName}" FontWeight="Bold"/>, <Run Text="{Binding FirstName}"/>
+                                <Run Text="{Binding LastName}" FontSize="16" FontWeight="Bold"/>, <Run Text="{Binding FirstName}" FontSize="16" FontWeight="SemiBold"/>
                             </TextBlock>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
