--- a/ZooManager/App.xaml
+++ b/ZooManager/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="ZooManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ZooManager"
-             StartupUri="/UI/Views/MainWindow.xaml">
+             xmlns:local="clr-namespace:ZooManager">
     <Application.Resources>
         <!-- Colors -->
         <Color x:Key="Primary">#1E5631</Color>
