--- a/ZooManager/UI/Views/SpeciesView.xaml
+++ b/ZooManager/UI/Views/SpeciesView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" d:DesignHeight="600" d:DesignWidth="900">
+             mc:Ignorable="d" d:DesignHeight="600" d:DesignWidth="900"
+             AutomationProperties.AutomationId="View.Species">
     <Grid Margin="24">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
